--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: PercentileAnnualCycle
 Type: Package
 Title: Compute Percentile Annual Cycle of climate variables
 Version: 1.0
-Author: Hurtado I. Santiago
+Author: Hurtado I. Santiago, Ricetti Lorenzo
 Maintainer: Hurtado I. Santiago <hurtado.santiago@inta.gob.ar>
 Description: Compute Percentile Annual Cycle of climate variables. It provides the moving empirical percentile function (MEP) and the GAM smoothing function for the MEP output.
 License: GPL-3
